tests/negative/comptime/use_rt.orng
// use_rt.orng:10:32: error: symbol `x` is never defined
//     let y: Int = comptime { x + 4 }
//                               ^
// use_rt.orng:9:10: note: declared here
//     let x: Int = 4
//         ^
// 
fn main() -> Int {
    let x: Int = 4
    let y: Int = comptime { x + 4 }
    y
}